# adk-crisis-response-service

./: .gitignore  README.md  pyproject.toml
crisis_response/: __init__.py  agent.py  prompts.py
crisis_response/shared_libraries/: prepare_crisis_corpus.py
deployment/: deploy.py
tests/: verify_vertex_agent.py
